fix(kernel): merge tuned JVM args additively instead of replacing them